cashly/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: cashly-http-app
spec:
  parentRefs:
    - kind: Gateway
      name: main-gw
      namespace: istio-gateway
  hostnames:
    - cashly.apps.irori235.dev
  rules:
    - backendRefs:
        - name: cashly
          port: 80
